Changes by Jacob Barkdull 2015-12-17
--------------------------------------------------------------------------------
* Added optional required field options

	- The login inputs can now be individually set as required, meaning a
	  user will not be able to post or edit a comment, or login, without
	  properly filling the specific fields.


* Fixed: Login inputs with empty values aren't passed to the login method.
* Fixed: More comments are automatically shown when URL jump points to form.
* Fixed: Messages close after 10 seconds of the first one opened, not the last.
* Improved how failed comment post handling works.
* Removed individual settings for enabled login fields in favor of an array.
* Added locale string for individual required input error messages.
* Added a CSS class for styling required login inputs.
* Changed locales to reflect optional and required fields.
* Minor modifications to some icons.
* Improved custom login code.
* Renamed a couple variables.
* Reordered some functions.
* Improved default theme.


Changes by Jacob Barkdull 2015-12-12
--------------------------------------------------------------------------------
* Locales

	- Replaced "_TITLE_", "_NUM_", and "_TIME_" with format specifiers.
	- Now using printf functions instead of str_replace for locale strings.
	- "Top of Thread" changed to "In reply to %s".
	- Merged improvements to Spanish locale.
	- Added Brazilian Portuguese locale.
	- Added Romanian locale.


* hashover/scripts/writecomments.php

	- Login code decoupled into separate files.
	- `kickback ()` method no longer exits script.
	- Class methods now have return values.

	- Methods for posting and editing comments now return the comment as an
	  array when AJAX requests are made. This allows the receiving code to
	  encode the comment as JSON for AJAX requests.


* Added new Login and DefaultLogin classes

	- New login class for handling custom login mechanisms.
	- New default login class for default login mechanism.

