@@ -1,3 +1,8 @@
+Changes by Jacob Barkdull 2015-12-24
+--------------------------------------------------------------------------------
+* Added basic markdown support.
+
+
 Changes by Jacob Barkdull 2015-12-17
 --------------------------------------------------------------------------------
 * Added optional required field options
